networkpolicy/backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: backend
  label:
    name: backend
spec: {}
status: {}
