networkpolicy/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: frontend
  label:
    name: frontend
spec: {}
status: {}
