networkpolicy/other-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: other
  label:
    name: other
spec: {}
status: {}
