networkpolicy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: frontend
    spec:
      containers:
      - image: centos
        name: frontend
        command: ["sleep", "864000"]
        resources: {}
status: {}
