networkpolicy/backend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: backend-app
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: backend-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: backend-app
    spec:
      containers:
      - image: gashirar/k8s-debug-tools:v1
        name: backend-app
        ports:
        - containerPort: 80
        resources: {}
---
status: {}
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: backend-app
  name: backend-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: backend-app
status:
  loadBalancer: {}
