networkpolicy/frontend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: frontend-app
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: frontend-app
    spec:
      containers:
      - image: gashirar/k8s-debug-tools:v1
        name: frontend-app
        ports:
        - containerPort: 80
        resources: {}
status: {}
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: frontend-app
  name: frontend-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: frontend-app
status:
  loadBalancer: {}
